--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,7 +26,7 @@
                     </mat-form-field>
                 </div>
                 <div class="spacing-1">
-                    <button mat-raised-button color="primary">Login</button>
+                    <button mat-raised-button color="primary" (click)="loginNow()">Login</button>
                 </div>
                 <div class="spacing-2">
                     <button mat-button color="warn" (click)="navigateToRegister()">If not registered then click to register now!</button>
