--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,51 @@
-<p>dashboard works!</p>
+<mat-card>
+    <h3>Your Profile Details</h3>
+    <mat-card-content>
+        <div class="bootstrap-wrapper">
+            <div class="container">
+                <div class="container text-center">
+                    <img src="https://t4.ftcdn.net/jpg/03/46/93/61/360_F_346936114_RaxE6OQogebgAWTalE1myseY1Hbb5qPM.jpg"
+                        alt="" class="profile-image" />
+
+                    <h3 class="mt20">{{ fullname }}</h3>
+                </div>
+                <div class="row">
+                    <div class="col-md-10 offset-md-1">
+                        <table id="" class="table text-center">
+                            <tr>
+                                <td>Full Name</td>
+                                <td>{{ fullname }}</td>
+                            </tr>
+                            <tr>
+                                <td>User Name</td>
+                                <td>{{ username }}</td>
+                            </tr>
+                            <tr>
+                                <td>Gender</td>
+                                <td>{{ gender }}</td>
+                            </tr>
+                            <tr>
+                                <td>Age</td>
+                                <td>{{ age }}</td>
+                            </tr>
+                            <tr>
+                                <td>Country</td>
+                                <td>{{ country }} </td>
+                            </tr>
+                            <tr>
+                                <td>My hobbies</td>
+                                <td> <span class="" *ngFor="let list of hobbiesData">{{list}}</span></td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </mat-card-content>
+    <mat-card-actions class="text-center">
+        <button class="update-button" mat-raised-button color="primary" (click)="updateDetails()">UPDATE</button>
+    </mat-card-actions>
+    <mat-card-actions class="text-center">
+        <button class="update-button" mat-raised-button color="accent" (click)="addHobbiesSection()">Add Hobbies</button>
+    </mat-card-actions>
+</mat-card>
